--- a/location.html
+++ b/location.html
@@ -27,8 +27,8 @@
                     mapLink.href = `https://www.google.com/maps/@${latitude},${longitude},16z/`;
                     // mapLink.href = `https://www.openstreetmap.org/#map=18/${latitude}/${longitude}`;
                     mapLink.textContent = `MAP Link: Latitude: ${latitude} - Longitude: ${longitude}`;
-                    lat.textContent = `latitude = ${latitude}`;
-                    lon.textContent = `latitude = ${longitude}`;
+                    lat.textContent = `latitude (LAT)  = ${latitude}`;
+                    lon.textContent = `longitude (LON) = ${longitude}`;
                 }
 
                 function error() {
